Добавил недостающую документацию
